ch1/kustomize/todo/base/todoapp-all.yaml

---
apiVersion: v1
kind: Service
metadata:
  
  labels:
    app: todoapp
  name: todoapp
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: todoapp

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taskdb
  name: taskdb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: taskdb


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
 
  labels:
    app: todoapp
  name: todoapp
spec:
  port:
    targetPort: 5000
  to:
    kind: ""
    name: todoapp
    weight: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
 
  labels:
    app: taskdb
  name: taskdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskdb
  strategy: {}
  template:
    metadata:
      
      labels:
        app: taskdb
    spec:
      volumes:
      - name: dbfiles
        persistentVolumeClaim:
          claimName: db
      containers:
      - env:
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              name: secret-todoapp-db
              key: MYSQL_USER
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: secret-todoapp-db
              key: MYSQL_PASSWORD
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              name: secret-todoapp-db
              key: MYSQL_DATABASE
        - name: MYSQL_ROOT_PASSWORD
          value: abrakadabra
        #old image: registry.redhat.io/rhel8/mariadb-105
        image: quay.io/selcukkaraca/mariadb-105:v1
        name: mariadb-105
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: dbfiles
        resources: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
 
  labels:
    app: todoapp
  name: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  strategy: {}
  template:
    metadata:
     
      labels:
        app: todoapp
    spec:
      containers:
      - env:
        - name: USERNAME
          valueFrom:
            secretKeyRef:
              name: secret-todoapp-db
              key: MYSQL_USER
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              name: secret-todoapp-db
              key: MYSQL_PASSWORD
        - name: DBNAME
          valueFrom:
            secretKeyRef:
              name: secret-todoapp-db
              key: MYSQL_DATABASE
        image: quay.io/selcukkaraca/todoapp:v1.0
        name: todoapp
        resources: 
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 500Mi
